--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "build:prod": "webpack -p",
+    "serve": "webpack-dev-server --hot --inline" 
   },
   "keywords": [],
   "author": "",
