--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
   "scripts": {
     "build": "webpack",
     "build:prod": "webpack -p",
-    "serve": "webpack-dev-server --hot --inline" 
+    "serve": "webpack-dev-server --hot --inline"
   },
-  "keywords": ["boilerplate"],
+  "keywords": [
+    "boilerplate"
+  ],
   "author": "Bennie Robinson",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
+  }
 }
