--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
+  },
+  "babel" : {
+    "presets": ["es2015", "stage-0"],
+    "plugins": ["transform-async-to-generator"]
   }
 }
