--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "babel-preset-es2015": "^6.18.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
+  },
+  "babel": {
+    "presets": ["es2015"]
   }
 }
