--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
-  "name": "boilerplate",
+  "name": "CQRS-Example",
   "version": "1.0.0",
-  "description": "Basic boilerplate for starting small JS projects",
+  "description": "Attempt at implementation of Greg Young's SimpleCQRS in JavaScript",
   "main": "bin/app.js",
   "scripts": {
-    "build": "webpack",
-    "build:prod": "webpack -p",
-    "serve": "webpack-dev-server --hot --inline"
+    "build": "ts-babel"
   },
   "keywords": [
-    "boilerplate"
+    "cqrs"
   ],
   "author": "Bennie Robinson",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "@types/core-js": "^0.9.35",
+    "ts-babel": "^1.2.2"
   },
-  "babel": {
-    "presets": ["es2015"]
+  "dependencies": {
+    "typescript": "^2.0.10"
   }
 }
