--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "CQRS-Example",
+  "name": "boilerplate",
   "version": "1.0.0",
-  "description": "Attempt at implementation of Greg Young's SimpleCQRS in JavaScript",
+  "description": "Basic boilerplate for starting small JS projects",
   "main": "bin/app.js",
   "scripts": {
-    "build": "ts-babel"
+    "build": "webpack",
+    "build:prod": "webpack -p",
+    "serve": "webpack-dev-server --hot --inline"
   },
   "keywords": [
-    "cqrs"
+    "boilerplate"
   ],
   "author": "Bennie Robinson",
   "license": "MIT",
   "devDependencies": {
-    "@types/core-js": "^0.9.35",
-    "ts-babel": "^1.2.2"
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
-  "dependencies": {
-    "typescript": "^2.0.10"
+  "babel": {
+    "presets": ["es2015"]
   }
 }
